Fix charts jumping around on page load

--- a/Web/src/app/dashboard/dashboard.component.scss
+++ b/Web/src/app/dashboard/dashboard.component.scss
@@ -7,3 +7,7 @@
 .icon-link:hover {
     text-decoration: none;
 }
+
+.chart-row {
+    height: 400px;
+}
